dist_man1_MANS=

if BUILD_FJARCODED
  dist_man1_MANS+=fjarcoded.1
endif

if ENABLE_QT
  dist_man1_MANS+=fjarcode-qt.1
endif

if BUILD_FJARCODE_CLI
  dist_man1_MANS+=fjarcode-cli.1
endif

if BUILD_FJARCODE_TX
  dist_man1_MANS+=fjarcode-tx.1
endif

if BUILD_FJARCODE_UTIL
  dist_man1_MANS+=fjarcode-util.1
endif

if ENABLE_WALLET
if BUILD_FJARCODE_WALLET
  dist_man1_MANS+=fjarcode-wallet.1
endif
endif
